<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>test_project</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>test_project</name>
  <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <aspectj.version>1.9.22.1</aspectj.version>
        <allure.version>2.29.1</allure.version>
        <log4j2.version>2.23.1</log4j2.version>
        <maven.surefire.plugin.version>3.5.2</maven.surefire.plugin.version>
        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
        <allure.maven.version>2.10.0</allure.maven.version>
        <rest.assured.version>5.5.0</rest.assured.version>
        <org.apache.guacamole.version>1.5.5</org.apache.guacamole.version>
        <junit.version>5.11.4</junit.version>
        <com.fasterxml.jackson>2.18.2</com.fasterxml.jackson>
        <repository>https://nexus.dev.box/repository/maven-public/</repository>
        <testit.version>2.8.0</testit.version><!-- Test IT -->
    </properties>
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>allure</id>
            <url>https://dl.bintray.com/qameta/maven</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central1</id>
            <name>libs-release</name>
            <url>${repository}</url>
        </repository>
        <repository>
            <snapshots/>
            <id>snapshots</id>
            <name>libs-snapshot</name>
            <url>${repository}</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>atlassian-public</id>
            <url>https://m2proxy.atlassian.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>plugins-release</name>
            <url>${repository}</url>
        </pluginRepository>
        <pluginRepository>
            <snapshots/>
            <id>snapshots</id>
            <name>plugins-snapshot</name>
            <url>${repository}</url>
        </pluginRepository>
    </pluginRepositories>
  <dependencies>
      <!-- ui-->
      <dependency>
          <groupId>io.qameta.allure</groupId>
          <artifactId>allure-selenide</artifactId>
          <version>${allure.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
          <version>${log4j2.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-api</artifactId>
          <version>${log4j2.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-slf4j-impl</artifactId>
          <version>${log4j2.version}</version>
      </dependency>
      <dependency>
          <groupId>com.codeborne</groupId>
          <artifactId>selenide</artifactId>
          <version>7.12.0</version>
      </dependency>
      <dependency>
          <groupId>io.github.bonigarcia</groupId>
          <artifactId>webdrivermanager</artifactId>
          <version>5.7.0</version>
      </dependency>
      <dependency>
          <groupId>org.awaitility</groupId>
          <artifactId>awaitility</artifactId>
          <version>4.2.0</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.dataformat</groupId>
          <artifactId>jackson-dataformat-yaml</artifactId>
          <version>${com.fasterxml.jackson}</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
          <version>${com.fasterxml.jackson}</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
          <version>${com.fasterxml.jackson}</version>
      </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-api</artifactId>
          <version>${junit.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-params</artifactId>
          <version>${junit.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-engine</artifactId>
          <version>${junit.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.maven.surefire</groupId>
          <artifactId>surefire-junit-platform</artifactId>
          <version>${maven.surefire.plugin.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>io.qameta.allure</groupId>
          <artifactId>allure-junit5</artifactId>
          <version>${allure.version}</version>
          <exclusions>
              <exclusion>
                  <groupId>org.junit.jupiter</groupId>
                  <artifactId>*</artifactId>
              </exclusion>
          </exclusions>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.jayway.jsonpath</groupId>
          <artifactId>json-path</artifactId>
          <version>2.9.0</version>
      </dependency>
      <dependency>
          <groupId>org.json</groupId>
          <artifactId>json</artifactId>
          <version>20240303</version>
      </dependency>
      <dependency>
          <groupId>com.github.javaparser</groupId>
          <artifactId>javaparser-core</artifactId>
          <version>3.25.5</version>
      </dependency>
      <dependency>
          <groupId>com.fasterxml.jackson.datatype</groupId>
          <artifactId>jackson-datatype-jsr310</artifactId>
          <version>2.18.2</version>
      </dependency>
      <dependency>
          <groupId>io.rest-assured</groupId>
          <artifactId>json-path</artifactId>
          <version>${rest.assured.version}</version>
      </dependency>
      <dependency>
          <groupId>io.rest-assured</groupId>
          <artifactId>rest-assured</artifactId>
          <version>${rest.assured.version}</version>
      </dependency>
      <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
          <version>1.18.36</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.guacamole</groupId>
          <artifactId>guacamole-common</artifactId>
          <version>${org.apache.guacamole.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.guacamole</groupId>
          <artifactId>guacamole-ext</artifactId>
          <version>${org.apache.guacamole.version}</version>
      </dependency>
      <dependency>
          <groupId>org.aspectj</groupId>
          <artifactId>aspectjweaver</artifactId>
          <version>1.9.22.1</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>org.reflections</groupId>
          <artifactId>reflections</artifactId>
          <version>0.10.2</version>
          <scope>test</scope>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
      <dependency>
          <groupId>org.assertj</groupId>
          <artifactId>assertj-core</artifactId>
          <version>3.26.3</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.bouncycastle</groupId>
          <artifactId>bcprov-jdk18on</artifactId>
          <version>1.79</version>
      </dependency>
      <dependency>
          <groupId>org.jetbrains</groupId>
          <artifactId>annotations</artifactId>
          <version>26.0.1</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-compress</artifactId>
          <version>1.27.1</version>
      </dependency>
      <dependency>
          <groupId>org.apache.httpcomponents.client5</groupId>
          <artifactId>httpclient5</artifactId>
          <version>5.4.1</version>
      </dependency>
  </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <!-- БАЗОВЫЙ SUREFIRE PLUGIN -->

        </plugins>
    </build>
</project>

